# BlockBreaker3D

./: .gitignore  CMakeLists.txt  EBO.cpp  LICENSE.txt  PowerUp.cpp  PowerUp.h  PowerUps.cpp  PowerUps.h  README.md  Texture.cpp  Texture.h  VBO.cpp  VBO.h  audio.cpp  audio.h  block.cpp  block.h  boilerPlate.cpp  boilerPlate.h  box.ply  default.frag  default.vert  glad.c  imgui.ini  importer.cpp  importer.h  interface.cpp  interface.h  main.cpp  model.frag  model.vert  particle.frag  particle.vert  particleSystem.cpp  particleSystem.h  pbr.frag  practice-2.vcxproj  practice-2.vcxproj.filters  reflective.frag  reflective.vert  (+8 more)
Libraries/include/glad/: glad.h
assets/shaders/: default.frag  default.vert  model.frag  particle.frag  particle.vert
cmake/toolchains/: mingw-w64.cmake
include/BlockBreaker3D/audio/: audio.h
include/BlockBreaker3D/core/: Texture.h  boilerPlate.h
include/BlockBreaker3D/core/gl/: VAO.h
include/BlockBreaker3D/game/: block.h  particleSystem.h  render.h
legacy/: irr.cpp
legacy/msvc/: practice-2.sln  practice-2.vcxproj.filters
models/: colored-paddle.glb  colored-paddle.gltf  colored-paddle.mtl  paddle.mtl
src/: main.cpp
src/audio/: audio.cpp
src/core/: Texture.cpp  boilerPlate.cpp  shaderClass.cpp
src/core/gl/: EBO.cpp  VAO.cpp  VBO.cpp
src/game/: block.cpp  particleSystem.cpp  render.cpp  vertices.cpp
src/ui/: interface.cpp
